# File-Zipper

./: CMakeLists.txt  FileZipper.cpp  README.md  build.bat  run.bat
